plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'facilityflow'
version = '0.1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = '25.0.2'
    modules = ['javafx.controls']
}

application {
    mainClass = 'facilityflow.RequesterPreviewLauncher'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.13.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
    finalizedBy jacocoTestReport
}

checkstyle {
    toolVersion = '10.26.1'
    maxWarnings = 0
}

jacoco {
    toolVersion = '0.8.14'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

wrapper {
    gradleVersion = '9.1.0'
    distributionType = Wrapper.DistributionType.BIN
    distributionSha256Sum = 'a17ddd85a26b6a7f5ddb71ff8b05fc5104c0202c6e64782429790c933686c806'
}
